# SiiliCam-obs

./: .gitmodules  CMakeLists.txt  License.txt  README.md  SiiliCamInstaller.nsi  installer.iss.in  ndi-config.v1.json
SiiliCam-obs/: CMakeLists.txt  SiiliCam-obs.cpp  SiiliCam-obs.h  siilicam-source.cpp
SiiliCam-obs/include/: RestHandlers.h  shared-data.h  siilicam-source.h
res/: app_icon.rc
scripts/: moveandrun.ps1  obsfind.ps1  taillog.ps1
